--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <body>
     <!-- header design-->
     <header class="header">
-      <a href="#" class="logo">Rafael.</a>
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <a href="#" class="logo"
+        >Rafael.<span class="animate" style="--i: 1"></span
+      ></a>
+      <div class="bx bx-menu" id="menu-icon">
+        <span class="animate" style="--i: 2"></span>
+      </div>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -24,25 +28,32 @@
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
+        <span class="animate" style="--i: 2"></span>
       </nav>
     </header>
     <!-- home section design-->
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
       <div class="home-content">
-        <h1>Hi, I'm <span>Rafael Gamarra</span></h1>
+        <h1>
+          Hi, I'm <span>Rafael Gamarra</span
+          ><span class="animate" style="--i: 2"></span>
+        </h1>
         <div class="text-animate">
           <h3>Frontend Developer</h3>
+          <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
           debitis voluptatibus rem ipsam facilis, delectus laudantium sed,
           laboriosam voluptates sunt quasi et veniam sapiente cupiditate error
           magni animi ab eum.
+          <span class="animate" style="--i: 4"></span>
         </p>
 
         <div class="btn-box">
           <a href="#" class="btn">Hire Me</a>
           <a href="#" class="btn">Let's talk</a>
+          <span class="animate" style="--i: 5"></span>
         </div>
       </div>
 
@@ -50,34 +61,46 @@
         <a href="#"><i class="bx bxl-facebook"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
         <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+        <span class="animate" style="--i: 6"></span>
       </div>
     </section>
 
     <!-- About section design -->
     <section class="about" id="about">
-      <h2 class="heading">About <span>Me</span></h2>
+      <h2 class="heading">
+        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="about-content">
-        <h3>Frontend Developer!</h3>
+        <h3>
+          Frontend Developer!<span class="animate scroll" style="--i: 2"></span>
+        </h3>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure hic
           quis quibusdam excepturi perspiciatis vel perferendis quo nam cumque
           repellat quam sit sint consectetur alias similique, fugit porro
           laudantium possimus?
+          <span class="animate scroll" style="--i: 3"></span>
         </p>
 
         <div class="btn-box btns">
           <a href="#" class="btn">Read More</a>
+          <span class="animate scroll" style="--i: 4"></span>
         </div>
       </div>
     </section>
 
     <!-- Education section design -->
     <section class="education" id="education">
-      <h2 class="heading">My <span>Journey</span></h2>
+      <h2 class="heading">
+        My <span>Journey</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
       <div class="education-row">
         <div class="education-column">
-          <h3 class="title">Education</h3>
+          <h3 class="title">
+            Education<span class="animate scroll" style="--i: 2"></span>
+          </h3>
           <div class="education-box">
             <div class="education-content">
               <div class="content">
@@ -93,6 +116,7 @@
                 </p>
               </div>
             </div>
+            <span class="animate scroll" style="--i: 3"></span>
 
             <div class="education-content">
               <div class="content">
@@ -127,7 +151,9 @@
         </div>
 
         <div class="education-column">
-          <h3 class="title">Experience</h3>
+          <h3 class="title">
+            Experience<span class="animate scroll" style="--i: 4"></span>
+          </h3>
           <div class="education-box">
             <div class="education-content">
               <div class="content">
@@ -143,6 +169,7 @@
                 </p>
               </div>
             </div>
+            <span class="animate scroll" style="--i: 5"></span>
 
             <div class="education-content">
               <div class="content">
@@ -180,11 +207,16 @@
 
     <!-- Skills section design -->
     <section class="skills" id="skills">
-      <h2 class="heading">My <span>Skills</span></h2>
+      <h2 class="heading">
+        My <span>Skills</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="skills-row">
         <div class="skills-column">
-          <h3 class="title">Coding Skills</h3>
+          <h3 class="title">
+            Coding Skills<span class="animate scroll" style="--i: 2"></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -208,11 +240,17 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+            <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
 
         <div class="skills-column">
-          <h3 class="title">Professional Skills</h3>
+          <h3 class="title">
+            Professional Skills<span
+              class="animate scroll"
+              style="--i: 5"
+            ></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -236,13 +274,17 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+            <span class="animate scroll" style="--i: 6"></span>
           </div>
         </div>
       </div>
     </section>
     <!-- Contact session design -->
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">
+        Contact <span>Me!</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <form action="#">
         <div class="input-box">
@@ -255,6 +297,7 @@
             <input type="text" placeholder="Email Address" required />
             <span class="focus"></span>
           </div>
+          <span class="animate scroll" style="--i: 3"></span>
         </div>
 
         <div class="input-box">
@@ -267,22 +310,25 @@
             <input type="text" placeholder="Email subjet" required />
             <span class="focus"></span>
           </div>
+          <span class="animate scroll" style="--i: 5"></span>
+        </div>
 
-          <div class="textarea-field">
-            <textarea
-              name=""
-              id=""
-              cols="100"
-              rows="10"
-              placeholder="Your Message"
-              required
-            ></textarea>
-            <span class="focus"></span>
-          </div>
+        <div class="textarea-field">
+          <textarea
+            name=""
+            id=""
+            cols="100"
+            rows="10"
+            placeholder="Your Message"
+            required
+          ></textarea>
+          <span class="focus"></span>
+          <span class="animate scroll" style="--i: 7"></span>
+        </div>
 
-          <div class="btn-box btns">
-            <button type="submit" class="btn">Submit</button>
-          </div>
+        <div class="btn-box btns">
+          <button type="submit" class="btn">Submit</button>
+          <span class="animate scroll" style="--i: 9"></span>
         </div>
       </form>
     </section>
@@ -291,10 +337,12 @@
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2023 by Codehal | All Rights Reserved.</p>
+        <span class="animate scroll" style="--i: 1"></span>
       </div>
 
       <div class="footer-iconTop">
         <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+        <span class="animate scroll" style="--i: 2"></span>
       </div>
     </footer>
     <script src="js/script.js"></script>
